--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="CharlesRice_Resume.pdf">Resume</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -171,7 +174,7 @@
                     <p>I'm a former financial journalist and writer who saw the writing on the wall and changed my entire career over to data science.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Now, I augment my 'hard' skills in Python, data analysis, and machine learning with ten years' experience in communications to tell interesting, engaging stories with data.</p>
+                    <p>Now, I augment my 'hard' skills in Python, data analysis, and machine learning with ten years' experience in communications to tell engaging stories with data.</p>
                 </div>
                 <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="#" class="btn btn-lg btn-outline">
