changing to web resume

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <a href="#contact">Contact</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="CharlesRice_Resume.pdf">Resume</a>
+                        <a href="CharlesRice_Resume_Web.pdf">Resume</a>
                     </li>
                 </ul>
             </div>
