--- a/index.html
+++ b/index.html
@@ -272,6 +272,9 @@
                             <li>
                                 <a href="https://github.com/CEMARR" class="btn-social btn-outline"><span class="sr-only">Github</span><i class="fa fa-fw fa-github"></i></a>
                             </li>
+                            <li>
+                                <a href="https://medium.com/@Charles.Rice" class="btn-social btn-outline"><span class="sr-only">Medium</span><i class="fa fa-fw fa-medium"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <!-- <div class="footer-col col-md-4">
@@ -285,7 +288,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Charles M. Rice 2016
+                        Copyright &copy; Charles M. Rice 2016 | Site theme Freelancer created by <a href="http://startbootstrap.com">Start Bootstrap</a>.
                     </div>
                 </div>
             </div>
