--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/mmhead_mart.png" alt="">
                     <div class="intro-text">
-                        <h1 class="name">Charles Rice</h1>
+                        <h1 class="name">Charles M. Rice</h1>
                         <hr class="star-light">
                         <span class="skills">Data Science & Analytic Translation</span>
                     </div>
