Updating website content 4-20

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="Cabin">
+                        <img src="img/portfolio/bibendum.png" class="img-responsive" alt="Bib">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -114,7 +114,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="Slice of cake">
+                        <img src="img/portfolio/phone-book.png" class="img-responsive" alt="phone">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -124,7 +124,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="Circus tent">
+                        <img src="img/portfolio/stroller.png" class="img-responsive" alt="stroller">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -134,7 +134,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="Game controller">
+                        <img src="img/portfolio/bottles.png" class="img-responsive" alt="bottles">
                     </a>
                 </div>
                 <!-- <div class="col-sm-4 portfolio-item">
@@ -193,7 +193,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
                     <hr class="star-primary">
-                    <p> Email using first and last name to the google email domain</p>
+                    <p> Email using first 'dot' last name to the google email domain</p>
                       <p>-OR-</p>
                       <p>Using one of the fine social networks below</p>
                 </div>
@@ -316,21 +316,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Michelin Stars for DC</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/bibendum.png" class="img-responsive img-centered" alt="">
+                            <p>Can data science be used to predict something so ineffably qualitative as gourmet cuisine? Absolument! With Python, some web scraping, and a lot of NLP, anything is possible.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="https://generalassemb.ly/education/data-science-immersive">General Assembly</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>October 2016</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Repository:
+                                    <strong><a href="https://github.com/CEMARR/Portfolio/tree/master/DSI-Michelin">Github</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -353,21 +353,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Validating Quotations</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/phone-book.png" class="img-responsive img-centered" alt="">
+                            <p>Did they say the thing they're said to have said? Using the published texts of three known writers - Abraham Lincoln, Mark Twain, and Oscar Wilde - I'm building an algorithm to identify the likelihood that they said the thing.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="https://generalassemb.ly/education/data-science-immersive">General Assembly</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>October 2016 (ongoing)
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Repository:
+                                    <strong><a href="https://github.com/CEMARR/Portfolio/tree/master/DSI-Capstone">Github</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -390,21 +390,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>cNanny Pricing Algorithm</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/stroller.png" class="img-responsive img-centered" alt="">
+                            <p>cNanny is a service that screens and matches nannies with families who need them. The client requested a pricing algorithm that took into account the number of hours worked, the number of children, and the developmental stage of those children in determining a quote.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="http://cnanny.com">cNanny</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>March 2017
                                     </strong>
                                 </li>
                                 <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong><a href=""></a>Data Analysis, Predictive Modeling
                                     </strong>
                                 </li>
                             </ul>
@@ -427,21 +427,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Iowa Liquor Store Revenue</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/bottles.png" class="img-responsive img-centered" alt="">
+                            <p>Analysis of public Iowa liquor store data to identify revenue drivers and predict future revenue.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                    <strong><a href="https://generalassemb.ly/education/data-science-immersive">General Assembly</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="">September 2016</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Repository:
+                                  <strong><a href="https://github.com/CEMARR/Portfolio/tree/master/DSI-Iowa-Liquor-Sales">Github</a>
                                     </strong>
                                 </li>
                             </ul>
