--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="Safe">
+                        <img src="img/portfolio/twain_2.png" class="img-responsive" alt="Twain">
                     </a>
                 </div> -->
                 <!-- <div class="col-sm-4 portfolio-item">
