--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
+                              <p>Michelin Stars for DC</p>
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
@@ -111,6 +112,7 @@
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
+                              <p>Debunking Quotations</p>
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
@@ -121,6 +123,7 @@
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
+                              <p>cNanny Pricing</p>
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
@@ -131,6 +134,7 @@
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
+                              <p>Iowa Liquor Revenue</p>
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
@@ -256,6 +260,14 @@
                             <!-- <br>Beverly Hills, CA 90210</p> -->
                     </div>
                     <div class="footer-col col-md-4">
+                        <!-- <h3>About Freelancer</h3> -->
+                        <p></p>
+                        <p></p>
+                        <p></p>  
+                        <p>In God we trust
+                          <br>all others bring data</p>
+                    </div>
+                    <div class="footer-col col-md-4">
                         <h3>Virtual Locations</h3>
                         <ul class="list-inline">
                             <!-- <li>
@@ -278,10 +290,7 @@
                             </li>
                         </ul>
                     </div>
-                    <!-- <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-                    </div> -->
+
                 </div>
             </div>
         </div>
@@ -393,7 +402,7 @@
                             <h2>cNanny Pricing Algorithm</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/stroller.png" class="img-responsive img-centered" alt="">
-                            <p>cNanny is a service that screens and matches nannies with families who need them. The client requested a pricing algorithm that took into account the number of hours worked, the number of children, and the developmental stage of those children in determining a quote.</p>
+                            <p>cNanny screens and matches nannies with families who need them. The client requested a pricing algorithm that took into account the number of hours worked, the number of children, and the developmental stage of those children in determining a quote.</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://cnanny.com">cNanny</a>
