Clean up portfolio icons

--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                              <p>Michelin Stars for DC</p>
-                                <i class="fa fa-search-plus fa-3x"></i>
+                              <p>Which DC Restaurants Get Stars?</p>
+                              <p>(NLProc, Webscraping, Python)</p>
+                                <!-- <i class="fa fa-search-plus fa-2x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/bibendum.png" class="img-responsive" alt="Bib">
@@ -112,8 +113,9 @@
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                              <p>Debunking Quotations</p>
-                                <i class="fa fa-search-plus fa-3x"></i>
+                              <p>Validating Famous Quotations</p>
+                              <p>(NLProc, Python)<br><br>
+                                <!-- <i class="fa fa-search-plus fa-2x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/phone-book.png" class="img-responsive" alt="phone">
@@ -123,8 +125,9 @@
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                              <p>cNanny Pricing</p>
-                                <i class="fa fa-search-plus fa-3x"></i>
+                              <p>Pricing Model for a Startup</p>
+                              <p>(Excel, Python, Decision Tree Regression)</p>
+                                <!-- <i class="fa fa-search-plus fa-2x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/stroller.png" class="img-responsive" alt="stroller">
@@ -134,8 +137,9 @@
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                              <p>Iowa Liquor Revenue</p>
-                                <i class="fa fa-search-plus fa-3x"></i>
+                              <p>Predicting Iowa Liquor Store Revenue</p>
+                              <p>(Pandas, EDA, Linear Regression)</p>
+                                <!-- <i class="fa fa-search-plus fa-3x"></i> -->
                             </div>
                         </div>
                         <img src="img/portfolio/bottles.png" class="img-responsive" alt="bottles">
@@ -263,7 +267,7 @@
                         <!-- <h3>About Freelancer</h3> -->
                         <p></p>
                         <p></p>
-                        <p></p>  
+                        <p></p>
                         <p>In God we trust
                           <br>all others bring data</p>
                     </div>
