Updated scaling image

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/mm_pipe-t.png" alt="">
+                    <img class="img-responsive" src="img/mm_pipe_scaled.png" alt="">
                     <div class="intro-text">
                         <h1 class="name">Charles M. Rice</h1>
                         <hr class="star-light">
