--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a href="#contact">Contact</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="CharlesRice_Resume_Web.pdf">Resume</a>
+                        <a href="https://resume.creddle.io/resume/d0i0yeskw9d">Resume</a>
                     </li>
                 </ul>
             </div>
