--- a/resume.html
+++ b/resume.html
@@ -1,2 +1,2 @@
 <iframe src="https://resume.creddle.io/embed/d0i0yeskw9d"
-  width="850" height="1100" seamless></iframe>
+  width="850" height="1100" align="middle" seamless></iframe>
