--- a/resume.html
+++ b/resume.html
@@ -1,2 +1,5 @@
 <iframe src="https://resume.creddle.io/embed/d0i0yeskw9d"
-  width="850" height="1100" align="middle" seamless></iframe>
+style="display: block; width: 850; height: 1100;
+margin: 0 auto; border: 0;" seamless>
+</iframe>
+<!-- width="850" height="1100 -->
