--- a/copybook.html
+++ b/copybook.html
@@ -9,7 +9,7 @@ And the Gods of the Copybook Headings, I notice, outlast them all.<br> <br>
 We were living in trees when they met us. They showed us each in turn<br>
 That Water would certainly wet us, as Fire would certainly burn:<br>
 But we found them lacking in Uplift, Vision and Breadth of Mind,<br>
-So we left them to teach the Gorillas while we followed the March of Mankind.<br> <br>
+So we left them to teach the guerillas while we followed the March of Mankind.<br> <br>
 
 We moved as the Spirit listed. They never altered their pace,<br>
 Being neither cloud nor wind-borne like the Gods of the Market Place,<br>
